# tui-checkbox

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DUAL_HOSTING.md  LICENSE  README.md  cliff.toml  justfile
.gitea/workflows/: release.yml
.github/workflows/: release.yml
examples/: checkbox.rs  checkbox.tape  checkbox_alignment.rs  checkbox_label_position.rs  checkbox_width_wrapping.rs
examples/vhs/: checkbox_alignment_demo.tape  checkbox_label_position.tape  checkbox_width_wrapping.tape
scripts/: bump_version.sh
src/: lib.rs  symbols.rs
