[package]
name = "tui-checkbox"
version = "0.3.4"
authors = ["Sorin Albu-Irimies <sorinirimies@gmail.com>"]
edition = "2021"
rust-version = "1.74.0"
license = "MIT"
description = "A customizable checkbox widget for Ratatui TUI applications"
repository = "https://github.com/sorinirimies/tui-checkbox"
homepage = "https://github.com/sorinirimies/tui-checkbox"
keywords = ["tui", "terminal", "ratatui", "checkbox", "widget"]
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]
ratatui = { version = "0.29", default-features = false }

[dev-dependencies]
color-eyre = "0.6"
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"

[lib]
name = "tui_checkbox"
path = "src/lib.rs"

[[example]]
name = "checkbox"
path = "examples/checkbox.rs"
